--- a/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-static.ms.mdx
@@ -1,1 +1,8 @@
-## Placeholder
+## Endpoint API GTFS Statik
+
+```http
+# AKAN DATANG
+GET https://api.data.gov.my/gtfs-static
+```
+
+API Pengangkutan (GTFS) akan dilancarkan secara rasmi oleh pihak kami pada **Oktober 25,2023**. Nantikan kemaskini dari pihak kami tidak lama lagi!
