--- a/apps/docs/pages/realtime-api/weather.ms.mdx
+++ b/apps/docs/pages/realtime-api/weather.ms.mdx
@@ -1,5 +1,8 @@
-# Weather
+## Endpoint API Cuaca
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iusto quam natus eum molestias
-impedit, magnam error harum quos vitae illum quidem, quod modi doloremque iste adipisci nam corrupti
-quo?
+```http
+# AKAN DATANG
+GET https://api.data.gov.my/weather
+```
+
+API Cuaca akan dilancarkan secara rasmi oleh pihak kami pada **Oktober 5,2023**. Nantikan kemaskini dari pihak kami tidak lama lagi!
