--- a/apps/docs/pages/static-api/data-catalogue/overview.en.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/overview.en.mdx
@@ -8,7 +8,7 @@ GET https://api.data.gov.my/catalogue
 
 The Data Catalogue API is designed to allow users to access data from the data catalogue programmatically. It provides a set of endpoints that can be used to query the data based on various parameters and filters. The API is meant for use by developers and data scientists who want to programmatically access the data catalogue, although users who want to download data directly can also refer to the Data Catalogue page.
 
-### TODO: How do I know what resources are available?
+### How do I know what resources are available?
 
 To determine the available resources and their corresponding IDs and fields, you can refer to the Data Catalogue page. The Data Catalogue page provides a comprehensive list of all the resources available in the catalogue, along with their associated IDs and fields.
 
