--- a/apps/docs/pages/static-api/data-catalogue/overview.ms.mdx
+++ b/apps/docs/pages/static-api/data-catalogue/overview.ms.mdx
@@ -1,1 +1,17 @@
-## Placeholder
+## Endpoint API Katalog Data
+
+```http
+GET https://api.data.gov.my/catalogue
+```
+
+## Apa yang API Katalog Data boleh lakukan?
+
+API Katalog Data direka untuk membolehkan pengguna mengakses data dari katalog data secara berprogram. Ia menyediakan satu set titik akhir yang boleh digunakan untuk menanya data berdasarkan pelbagai parameter dan penapis. API ini ditujukan untuk digunakan oleh pembangun dan saintis data yang ingin mengakses katalog data secara berprogram, walaupun pengguna yang ingin memuat turun data secara langsung juga boleh merujuk kepada laman Katalog Data.
+
+### Bagaimana untuk mengetahu apakah sumber yang tersedia?
+
+Untuk menentukan sumber daya yang tersedia beserta ID dan medan yang berkaitan, anda boleh merujuk kepada laman Katalog Data. Laman Katalog Data menyediakan senarai komprehensif semua sumber daya yang tersedia dalam katalog, bersama dengan ID dan medan yang berkaitan.
+
+Dengan mengunjungi laman Katalog Data, anda boleh melayari sumber daya yang tersedia dan meneroka butiran mereka. Setiap sumber daya akan mempunyai ID unik yang boleh anda gunakan semasa membuat permintaan kepada API Katalog Data. Selain itu, anda boleh melihat medan atau lajur yang berkaitan dengan setiap sumber daya, yang akan membantu anda memahami struktur data dan maklumat yang tersedia.
+
+Pastikan untuk sentiasa memeriksa laman Katalog Data untuk sebarang kemas kini atau tambahan baru dalam katalog, kerana ia akan menyediakan maklumat yang paling terkini tentang sumber daya yang tersedia dan ID serta medan yang berkaitan.
