--- a/apps/docs/pages/changelog.en.mdx
+++ b/apps/docs/pages/changelog.en.mdx
@@ -4,6 +4,7 @@
 
 - Launched Malaysia's OpenAPI with the following endpoints:
   - `/data-catalogue` for accessing full data catalogue.
+  - `/opendosm` for accessing OpenDOSM specific data catalogue.
   - `/flood-warning` for accessing realtime flood warning data.
 
 [Unreleased]: #unreleased
