--- a/apps/app/public/locales/en-GB/catalogue.json
+++ b/apps/app/public/locales/en-GB/catalogue.json
@@ -1,7 +1,8 @@
 {
     "header": "Data Catalogue",
-    "description": "Your one-stop interface to browse Malaysia's wealth of open data. This page will consistently grow in depth and breadth with high-quality data from federal and state agencies in Malaysia. In the early stages, we will incrementally release data in a controlled manner rather than a <i>data dump</i>. On 13th Sep, look out for the release of daily births data, daily rainfall and temperature data, as well as granular income tax data!",
+    "description": "Your one-stop interface to browse Malaysia's wealth of open data. This page will consistently grow in depth and breadth with high-quality data from federal and state agencies in Malaysia. In the early stages, we will incrementally release data in a controlled manner rather than a <i>data dump</i>.",
     "description_agency": "Your one-stop interface to browse {{ agency }}'s wealth of open data. This page will consistently will grow in depth and breadth, providing richer and more varied data from {{ agency }}.",
+    "description_opendosm": "Your one-stop interface to browse our wealth of open data. This page will consistently grow in depth and breadth, providing richer and more varied data from the various divisions of DOSM.",
     "dataset_count": "{{ count }} data series, and counting",
     "download": "Download",
     "category": "Category",
