--- a/apps/app/public/locales/en-GB/countries.json
+++ b/apps/app/public/locales/en-GB/countries.json
@@ -115,7 +115,7 @@
     "KR": "South Korea",
     "KW": "Kuwait",
     "KG": "Kyrgyzstan",
-    "LA": "Lao People\u2019s Democratic Republic",
+    "LA": "Lao People’s Democratic Republic",
     "LV": "Latvia",
     "LB": "Lebanon",
     "LS": "Lesotho",
@@ -215,7 +215,7 @@
     "TO": "Tonga",
     "TT": "Trinidad and Tobago",
     "TN": "Tunisia",
-    "TR": "T\u00fcrkiye",
+    "TR": "Türkiye",
     "TM": "Turkmenistan",
     "TC": "Turks and Caicos Islands",
     "TV": "Tuvalu",
@@ -237,14 +237,14 @@
     "YE": "Yemen",
     "ZM": "Zambia",
     "ZW": "Zimbabwe",
-    "AX": "\u00c5land Islands",
+    "AX": "Åland Islands",
     "BQ": "Bonaire, Sint Eustatius and Saba",
-    "CW": "Cura\u00e7ao",
+    "CW": "Curaçao",
     "GG": "Guernsey",
     "IM": "Isle of Man",
     "JE": "Jersey",
     "ME": "Montenegro",
-    "BL": "Saint Barth\u00e9lemy",
+    "BL": "Saint Barthélemy",
     "MF": "Saint Martin (French part)",
     "RS": "Serbia",
     "SX": "Sint Maarten (Dutch part)",
