--- a/apps/app/public/locales/en-GB/dashboard-inisiatif-pendapatan-rakyat.json
+++ b/apps/app/public/locales/en-GB/dashboard-inisiatif-pendapatan-rakyat.json
@@ -1,6 +1,6 @@
 {
     "header": "The People's Income Initiative (IPR)",
-    "description": "In the Belanjawanku 2023 speech, the Prime Minister announced that the government would be allocating RM700 million towards the pursuit of ending poverty. And so - IPR was born. The brainchild of the Economic Ministry, IPR is a two-pronged strategy to increase the income of the poor, while trying to solve daily economic problems. For this reason, IPR focuses on eradicating poverty by funnelling participants into agricultural initiatives (INTAN), vending machine businesses (INSAN) and public service operation (IKHSAN). This dashboard tracks IPR\u2019s performance transparently for all to see.",
+    "description": "In the Belanjawanku 2023 speech, the Prime Minister announced that the government would be allocating RM700 million towards the pursuit of ending poverty. And so - IPR was born. The brainchild of the Economic Ministry, IPR is a two-pronged strategy to increase the income of the poor, while trying to solve daily economic problems. For this reason, IPR focuses on eradicating poverty by funnelling participants into agricultural initiatives (INTAN), vending machine businesses (INSAN) and public service operation (IKHSAN). This dashboard tracks IPR’s performance transparently for all to see.",
     "takeup_header": "How strong is the take-up of IPR among the rakyat?",
     "timeseries_title": "{{ state }}: Daily Registrations for IPR",
     "timeseries_title_monthly": "{{ state }}: Monthly Registrations for IPR",
