--- a/apps/app/public/locales/en-GB/dashboard-refugee-situation.json
+++ b/apps/app/public/locales/en-GB/dashboard-refugee-situation.json
@@ -8,7 +8,7 @@
     "arrivals": "Arrivals",
     "registrations": "Registrations",
     "resettlements": "Resettlements",
-    "barmeter_header": "What does Malaysia\u2019s refugee population look like?",
+    "barmeter_header": "What does Malaysia’s refugee population look like?",
     "tooltip": "{{ count, number }} refugees",
     "country": "Country of Origin",
     "mmr": "Myanmar",
