--- a/apps/app/public/locales/ms-MY/community.json
+++ b/apps/app/public/locales/ms-MY/community.json
@@ -1,6 +1,6 @@
 {
     "cta": "Sertailah MODCom",
-    "toast_teaser": "\ud83d\udea7 Tidak lama lagi, kawan! Tunggu sehingga Ogos 2023",
+    "toast_teaser": "🚧 Tidak lama lagi, kawan! Tunggu sehingga Ogos 2023",
     "header": "Malaysian Open Data Community (MODCom)",
     "description": "MODCom merupakan peluang anda untuk memacu hala tuju data terbuka Malaysia! Ia adalah satu komuniti yang menyatukan sektor awam, sektor swasta dan masyarakat am akan bekerjasama dalam memastikan data terbuka Malaysia terus mara ke hadapan.\n\nSertailah kami dalam usaha ini!",
     "fill_form": "Isikan maklumat anda untuk memohon:",
