--- a/apps/app/public/locales/en-GB/dashboard-retirement-readiness.json
+++ b/apps/app/public/locales/en-GB/dashboard-retirement-readiness.json
@@ -1,6 +1,6 @@
 {
     "header": "Retirement Readiness",
-    "description": "The prosperity of the elderly is a very important indicator for a country aspiring to high levels of economic welfare and happiness. A key component of this is financial readiness for retirement - whether the labour force is saving enough to last them through their golden years. In Malaysia, the Employees Provident Fund (EPF) is the agency primarily responsible for retirement savings for non-pensioners. Powered by their comprehensive data, this dashboard brings you the latest overview of Malaysians\u00c3\u00a2\u00c2\u0080\u00c2\u0099 retirement readiness.",
+    "description": "The prosperity of the elderly is a very important indicator for a country aspiring to high levels of economic welfare and happiness. A key component of this is financial readiness for retirement - whether the labour force is saving enough to last them through their golden years. In Malaysia, the Employees Provident Fund (EPF) is the agency primarily responsible for retirement savings for non-pensioners. Powered by their comprehensive data, this dashboard brings you the latest overview of MalaysiansÃ¢ÂÂ retirement readiness.",
     "heatmap_title": "A snapshot of balances in active EPF accounts",
     "median": "Median",
     "by_decile": "By Decile",
