--- a/apps/app/public/locales/ms-MY/dashboard-civil-service.json
+++ b/apps/app/public/locales/ms-MY/dashboard-civil-service.json
@@ -2,7 +2,7 @@
     "header": "Perkhidmatan Awam",
     "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
     "choro_header": "What proportion of the labour force is part of the civil service?",
-    "choro_desc": "This data takes into account all civil servants registered in JPA\u2019s Human Resource Management Information System (HRMIS), including staff manning service counters and ground operations across the country.",
+    "choro_desc": "This data takes into account all civil servants registered in JPA’s Human Resource Management Information System (HRMIS), including staff manning service counters and ground operations across the country.",
     "choro_rank": "Kedudukan (16)",
     "zoom": " mana-mana kementerian atau agensi kerajaan",
     "search_agency": "Cari nama agensi kerajaan",
