--- a/apps/opendosm/public/locales/en-GB/community.json
+++ b/apps/opendosm/public/locales/en-GB/community.json
@@ -1,6 +1,6 @@
 {
     "cta": "Join the MODCom",
-    "toast_teaser": "\ud83d\udea7  Not so soon, my friend! Wait until August 2023",
+    "toast_teaser": "🚧  Not so soon, my friend! Wait until August 2023",
     "header": "Malaysian Open Data Community (MODCom)",
     "description": "MODCom is your chance to drive the direction of Malaysia's open data journey! A community involving public servants, the private sector, and civil society, MODS brings together data scientists, subject matter experts, and policymakers to ensure that Malaysia's open data doesn't just stay at the frontier, but shapes it.\n\nDon't just ask for change - make it!",
     "fill_form": "Fill in your details to apply:",
