--- a/apps/opendosm/public/locales/en-GB/dashboard-population.json
+++ b/apps/opendosm/public/locales/en-GB/dashboard-population.json
@@ -1,6 +1,6 @@
 {
     "header": "The Population of Malaysia",
-    "description": "Brie halloumi say cheese. Say cheese mozzarella swiss bavarian bergkase danish fontina lancashire pepper jack when the cheese comes out everybody's happy. Chalk and cheese cheese on toast cottage cheese red leicester croque monsieur red leicester cheese on toast mascarpone. Cheesy feet squirty cheese squirty cheese pecorino camembert de normandie stinking bishop.",
+    "description": "Coming soon",
     "section_population": {
         "title": "How is the population of {{ state }} trending?",
         "description": "Population figures include both citizens and non-citizens, but do not include temporary residents."
