--- a/apps/opendosm/public/locales/ms-MY/countries.json
+++ b/apps/opendosm/public/locales/ms-MY/countries.json
@@ -215,7 +215,7 @@
     "TO": "Tonga",
     "TT": "Trinidad dan Tobago",
     "TN": "Tunisia",
-    "TR": "T\u00fcrkiye",
+    "TR": "Türkiye",
     "TM": "Turkmenistan",
     "TC": "Kepulauan Turki dan Caicos",
     "TV": "Tuvalu",
@@ -237,14 +237,14 @@
     "YE": "Yaman",
     "ZM": "Zambia",
     "ZW": "Zimbabwe",
-    "AX": "Kepulauan \u00c5land",
+    "AX": "Kepulauan Åland",
     "BQ": "Bonaire, Sint Eustatius dan Saba",
-    "CW": "Cura\u00e7ao",
+    "CW": "Curaçao",
     "GG": "Guernsey",
     "IM": "Pulau Man",
     "JE": "Jersey",
     "SAYA": "Montenegro",
-    "BL": "Saint Barth\u00e9lemy",
+    "BL": "Saint Barthélemy",
     "MF": "Saint Martin (bahagian Perancis)",
     "RS": "Serbia",
     "SX": "Sint Maarten (bahagian Belanda)",
