--- a/apps/opendosm/public/locales/ms-MY/dashboard-consumer-prices.json
+++ b/apps/opendosm/public/locales/ms-MY/dashboard-consumer-prices.json
@@ -26,7 +26,7 @@
     },
     "section_2": {
         "title": "Apakah tren IHP?",
-        "description": "IHP mengukur perubahan peratus kos pembelian bagi \u00c3\u0083\u00c2\u00a2\u00c3\u0082\u00c2\u0080\u00c3\u0082\u00c2\u009cbakul\u00c3\u0083\u00c2\u00a2\u00c3\u0082\u00c2\u0080\u00c3\u0082\u00c2\u009d tetap barangan dan perkhidmatan pada sesuatu tempoh masa yang ditetapkan, dengan merujuk kepada tahun asas (kini 2010). IHP teras tidak termasuk makanan segar yang harganya tidak menentu serta harga barangan kawalan oleh kerajaan. Carta di bawah menunjukkan tren keseluruhan IHP berserta 12 kumpulan utama barangan dan perkhidmatan yang dipantau oleh DOSM.",
+        "description": "IHP mengukur perubahan peratus kos pembelian bagi 'bakul' tetap barangan dan perkhidmatan pada sesuatu tempoh masa yang ditetapkan, dengan merujuk kepada tahun asas (kini 2010). IHP teras tidak termasuk makanan segar yang harganya tidak menentu serta harga barangan kawalan oleh kerajaan. Carta di bawah menunjukkan tren keseluruhan IHP berserta 12 kumpulan utama barangan dan perkhidmatan yang dipantau oleh DOSM.",
         "null_alcohol_tobacco": "Inflasi teras tidak dihasilkan kerana semua harga barangan dalam kategori ini sama ada tidak menentu ataupun dikawal."
     },
     "section_3": {
