--- a/apps/opendosm/public/locales/ms-MY/opendosm-home.json
+++ b/apps/opendosm/public/locales/ms-MY/opendosm-home.json
@@ -3,7 +3,7 @@
         "name": "OpenDOSM",
         "description": "Terokailah pelbagai jenis data terbitan DOSM. Jika data itu minyak yang baru, maka keterbukaan itulah saluran yang memaksimumkan kegunaannya."
     },
-    "category": "Agensi Statistik Nasional Malaysia",
+    "category": "Agensi Statistik Negara Malaysia",
     "header": "Data: Asas kepada pentadbiran cekap",
     "description": "OpenDOSM adalah platform yang mengkatalog, memberi visualisasi, dan menganalisis pelbagai jenis data daripada Jabatan Perangkaan Malaysia. Segala data yang dipaparkan di platform ini adalah sumber terbuka dan percuma demi manfaat negara. Jika data itu minyak yang baru, maka keterbukaan itulah saluran yang memaksimumkan kegunaannya.",
     "at_a_glance": "Malaysia secara Sepintas Lalu",
