--- a/apps/opendosm/public/locales/ms-MY/publications.json
+++ b/apps/opendosm/public/locales/ms-MY/publications.json
@@ -1,7 +1,7 @@
 {
-    "nso": "Agensi Statistik Nasional Malaysia",
+    "nso": "Agensi Statistik Negara Malaysia",
     "header": "Penerbitan",
-    "description": "As Malaysia's official national statistics organisation (NSO), DOSM's role goes far beyond just releasing datasets like the ones you can explore and download from our Data Catalogue. Every year, we release over 1000 publications slicing, dicing, and analysing the data we publish - to help people make sense of it. This page catalogues all of those publications, together with technical documentation, in a seamless interface for you to explore. Enjoy!",
+    "description": "Sebagai agensi statistik negara (NSO) rasmi Malaysia, peranan DOSM jauh lebih besar daripada hanya menerbitkan set data seperti yang terdapat di Katalog Data. Setiap tahun, kami lancarkan lebih daripada seribu penerbitan yang menerangkan dan menganalisa set data kami, untuk membantu orang ramai memahami dan mentafsir data tersebut. Lama ini mengkatalogkan segala penerbitan tersebut bersama nota teknikal dalam antaramuka yang senang untuk anda terokai!",
     "browse": "Layari",
     "upcoming": "Akan Datang",
     "upcoming_publications": "Penerbitan Akan Datang",
