docs. fix: postman link

--- a/apps/docs/pages/quickstart.ms.mdx
+++ b/apps/docs/pages/quickstart.ms.mdx
@@ -25,4 +25,4 @@ Kami mencadangkan anda mulakan penerokaan OpenAPI ini dengan berinteraksi dengan
 Koleksi ini menyediakan persekitaran interaktif di mana anda boleh menghantar permintaan dan menerima respons pada masa nyata.
 Ia menawarkan contoh-contoh yang menyeluruh dari semua 'endpoint' yang tersedia, membolehkan anda menguji permintaan, dan menyesuaikannya untuk memenuhi keperluan anda.
 
-[![Jalankan di Postman](https://run.pstmn.io/button.svg)](https://app.getpostman.com/run-collection/27417094-46653022-3966-4fa7-b2fa-45130738d101?action=collection%2Ffork&source=rip_markdown&collection-url=entityId%3D27417094-46653022-3966-4fa7-b2fa-45130738d101%26entityType%3Dcollection%26workspaceId%3Df874513b-de9a-4370-8063-8a1a6bcf994d)
+[![Run in Postman](https://run.pstmn.io/button.svg)](https://app.getpostman.com/run-collection/27417094-be6d1fa9-6e08-4588-a30d-eb2d6dcd7ad7?action=collection%2Ffork&source=rip_markdown&collection-url=entityId%3D27417094-be6d1fa9-6e08-4588-a30d-eb2d6dcd7ad7%26entityType%3Dcollection%26workspaceId%3Df874513b-de9a-4370-8063-8a1a6bcf994d)
